@@ -2,6 +2,7 @@
 	- tag 4.0.1.
 	- trunk is 4.0.2 in development.
 	- rcode REFUSED for queries to non-hosted zones.
+	- documented nsd-control zonestatus output in nsd-control manpage.
 
 21 January 2014: Wouter
 	- tag 4.0.1rc2
